fixed the cards layout and sizing when hovered. set heights and widths for the gametable piece components to get rid of overflow

--- a/src/components/player-hub/game-table/gameTable.scss
+++ b/src/components/player-hub/game-table/gameTable.scss
@@ -5,11 +5,17 @@
   gap: 0px 0px;
   grid-template-areas:
     "one two three";
+    min-height: 85vh;
 
-    .section-one {
+    .section-one, .section-two, .section-three {
       border: 1px solid red;
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+    .playersProgress, .activeCards {
+      border: 1px solid blue;
+      height: 50%;
+      width: 100%;
     }
 }
