--- a/src/components/player-hub/game-table/monster/monster.scss
+++ b/src/components/player-hub/game-table/monster/monster.scss
@@ -3,4 +3,7 @@
       width:100%;
       align-self:center
     }
+    li {
+      list-style-type:none;
+    }
 }
